# docgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.hermes/plans/: 2026-07-17_143000-docgen-textual-tui.md
docgen/: __main__.py  cli.py  cli_complete.py  config.py  tui.py  tui_app.py  welcome.py
docgen/context/: cli_surface.py  collector.py  git_history.py  gitignore.py  manifest.py  parsers.py  prompts.py  source.py
docgen/generator/: cache.py  engine.py  mkdocs.py  prompts.py  semantic_cache.py  token_budget.py  tokens.py
docgen/llm/: base.py  errors.py  factory.py  generic.py  retry.py
docgen/output/: docgen.css  markdown.py  pdf.py
docgen/templates/: loader.py  readme.md.j2
docgen/templates/manual/: index.md.j2  installation.md.j2  usage.md.j2
docgen/templates/wiki/: api-reference.md.j2  base.md.j2  changelog.md.j2  guides.md.j2  index.md.j2  installation.md.j2  quickstart.md.j2  usage.md.j2
docgen/utils/: net.py
tests/: test_assessment_fixes.py  test_cli.py  test_cli_surface.py  test_completions.py  test_config_isolated.py  test_generator.py  test_gitignore.py  test_manifest.py  test_output.py  test_prompts.py  test_providers.py  test_retry.py  test_security_fixes.py  test_semantic_cache.py  test_serve.py  test_source_parser.py  test_templates.py  test_token_budget.py  test_tokens_skeleton.py  test_tui.py  test_tui_textual.py  test_watchdog.py  test_welcome.py
